--- a/index.html
+++ b/index.html
@@ -55,7 +55,11 @@
             ><br />Web Developer
           </h1>
           <a href="#contact" class="button"> Contact</a>
-          <a href="./Gold Minimalist Professional Work Data Analyst Resume (2).pdf" class="btn">Check my Resume</a>
+          <a style="
+            @media and screen (max-width:600px)
+              {
+            .btn{margin-top:10px}
+            }" href="./Gold Minimalist Professional Work Data Analyst Resume (2).pdf" class="btn">Check my Resume</a>
         </div>
 
         <div class="home_social">
