--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
           </h1>
           <a href="#contact" class="button"> Contact</a>
           <a style="
-            @media and screen (max-width:600px)
+            @media screen and (max-width:600px)
               {
             .btn{margin-top:10px}
             }" href="./Gold Minimalist Professional Work Data Analyst Resume (2).pdf" class="btn">Check my Resume</a>
